// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryPanel renders correctly with full selection 1`] = `
.c6 {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-1-5);
  user-select: none;
}

.c7 {
  font-family: var(--font-heading);
  font-style: italic;
  color: color-mix(in srgb, var(--color-brand-rose) 45%, transparent);
  line-height: var(--line-height-tight);
  font-size: var(--font-size-note);
}

.c0 {
  border-radius: var(--radius-xl);
  border: 1px solid var(--color-border);
  background: var(--color-surface);
  padding: var(--space-6);
  display: flex;
  flex-direction: column;
  gap: var(--space-5);
}

.c1 {
  font-family: var(--font-heading);
  font-size: var(--font-size-xl);
  font-weight: var(--font-weight-light);
  color: var(--color-text-primary);
}

.c2 {
  font-size: var(--font-size-sm);
  color: var(--color-text-muted);
  margin-top: var(--space-0-5);
}

.c3 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: var(--space-2);
}

.c4 {
  display: flex;
  flex-direction: column;
  gap: var(--space-1);
  min-width: 0;
}

.c5 {
  width: 100%;
  aspect-ratio: 1;
  border-radius: var(--radius-md);
  overflow: hidden;
  position: relative;
  flex-shrink: 0;
}

.c8 {
  font-size: var(--font-size-2xs);
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing-xl);
  color: var(--color-text-muted);
  text-align: center;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  height: 4px;
  border-radius: var(--radius-full);
  background: var(--color-border);
  overflow: hidden;
}

.c10 {
  height: 100%;
  border-radius: var(--radius-full);
  background: var(--color-brand-rose);
  width: 100%;
  transition: width var(--transition-image) ease;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: var(--space-3);
  list-style: none;
  margin: 0;
  padding: 0;
}

.c12 {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: var(--space-3);
  font-size: var(--font-size-base);
  border-bottom: 1px solid var(--color-border);
  padding-bottom: var(--space-3);
}

.c12:last-child {
  border-bottom: none;
  padding-bottom: 0;
}

.c13 {
  color: var(--color-text-muted);
  flex-shrink: 0;
  font-size: var(--font-size-sm);
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing-md);
  font-weight: var(--font-weight-medium);
  padding-top: var(--space-0-5);
}

.c14 {
  color: var(--color-text-primary);
  text-align: right;
  font-family: var(--font-heading);
  font-size: var(--font-size-md);
  line-height: var(--line-height-snug);
}

.c15 {
  border-top: 2px solid var(--color-border-strong);
  padding-top: var(--space-4);
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.c16 {
  font-size: var(--font-size-base);
  color: var(--color-text-secondary);
  font-weight: var(--font-weight-medium);
}

.c17 {
  font-family: var(--font-heading);
  font-size: var(--font-size-2xl);
  color: var(--color-text-primary);
}

<div>
  <aside
    aria-label="summary"
    class="c0"
  >
    <div
      class=""
    >
      <h3
        class="c1"
      >
        summary
      </h3>
      <p
        class="c2"
      >
        3
        /
        3
         
        stepsCompleted
      </p>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Light Coverage
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Smoky Eye
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Nude Lip
        </p>
      </div>
    </div>
    <div
      aria-label="progress"
      aria-valuemax="3"
      aria-valuemin="0"
      aria-valuenow="3"
      class="c9"
      role="progressbar"
    >
      <div
        class="c10"
      />
    </div>
    <ul
      class="c11"
    >
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Base
        </span>
        <span
          class="c14"
        >
          Light Coverage
        </span>
      </li>
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Eyes
        </span>
        <span
          class="c14"
        >
          Smoky Eye
        </span>
      </li>
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Lips
        </span>
        <span
          class="c14"
        >
          Nude Lip
        </span>
      </li>
    </ul>
    <div
      class="c15"
    >
      <span
        class="c16"
      >
        totalLabel
      </span>
      <span
        class="c17"
      >
        €15
      </span>
    </div>
  </aside>
</div>
`;

exports[`SummaryPanel renders correctly with no selection 1`] = `
.c6 {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-1-5);
  user-select: none;
}

.c7 {
  font-family: var(--font-heading);
  font-style: italic;
  color: color-mix(in srgb, var(--color-brand-rose) 45%, transparent);
  line-height: var(--line-height-tight);
  font-size: var(--font-size-note);
}

.c0 {
  border-radius: var(--radius-xl);
  border: 1px solid var(--color-border);
  background: var(--color-surface);
  padding: var(--space-6);
  display: flex;
  flex-direction: column;
  gap: var(--space-5);
}

.c1 {
  font-family: var(--font-heading);
  font-size: var(--font-size-xl);
  font-weight: var(--font-weight-light);
  color: var(--color-text-primary);
}

.c2 {
  font-size: var(--font-size-sm);
  color: var(--color-text-muted);
  margin-top: var(--space-0-5);
}

.c3 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: var(--space-2);
}

.c4 {
  display: flex;
  flex-direction: column;
  gap: var(--space-1);
  min-width: 0;
}

.c5 {
  width: 100%;
  aspect-ratio: 1;
  border-radius: var(--radius-md);
  overflow: hidden;
  position: relative;
  flex-shrink: 0;
}

.c8 {
  font-size: var(--font-size-2xs);
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing-xl);
  color: var(--color-text-muted);
  text-align: center;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  height: 4px;
  border-radius: var(--radius-full);
  background: var(--color-border);
  overflow: hidden;
}

.c10 {
  height: 100%;
  border-radius: var(--radius-full);
  background: var(--color-brand-rose);
  width: 0%;
  transition: width var(--transition-image) ease;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: var(--space-3);
  list-style: none;
  margin: 0;
  padding: 0;
}

.c12 {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: var(--space-3);
  font-size: var(--font-size-base);
  border-bottom: 1px solid var(--color-border);
  padding-bottom: var(--space-3);
}

.c12:last-child {
  border-bottom: none;
  padding-bottom: 0;
}

.c13 {
  color: var(--color-text-muted);
  flex-shrink: 0;
  font-size: var(--font-size-sm);
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing-md);
  font-weight: var(--font-weight-medium);
  padding-top: var(--space-0-5);
}

.c14 {
  color: var(--color-text-primary);
  text-align: right;
  font-family: var(--font-heading);
  font-size: var(--font-size-md);
  line-height: var(--line-height-snug);
}

.c15 {
  color: var(--color-border-strong);
  font-size: var(--font-size-sm);
  font-style: italic;
  font-family: sans-serif;
}

.c16 {
  border-top: 2px solid var(--color-border-strong);
  padding-top: var(--space-4);
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.c17 {
  font-size: var(--font-size-base);
  color: var(--color-text-secondary);
  font-weight: var(--font-weight-medium);
}

.c18 {
  font-family: var(--font-heading);
  font-size: var(--font-size-2xl);
  color: var(--color-text-primary);
}

<div>
  <aside
    aria-label="summary"
    class="c0"
  >
    <div
      class=""
    >
      <h3
        class="c1"
      >
        summary
      </h3>
      <p
        class="c2"
      >
        0
        /
        3
         
        stepsCompleted
      </p>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Base
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Eyes
        </p>
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <span
              class="c7"
            >
              ✦
            </span>
          </div>
        </div>
        <p
          class="c8"
        >
          Lips
        </p>
      </div>
    </div>
    <div
      aria-label="progress"
      aria-valuemax="3"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c9"
      role="progressbar"
    >
      <div
        class="c10"
      />
    </div>
    <ul
      class="c11"
    >
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Base
        </span>
        <span
          class="c14"
        >
          <span
            class="c15"
          >
            —
          </span>
        </span>
      </li>
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Eyes
        </span>
        <span
          class="c14"
        >
          <span
            class="c15"
          >
            —
          </span>
        </span>
      </li>
      <li
        class="c12"
      >
        <span
          class="c13"
        >
          Lips
        </span>
        <span
          class="c14"
        >
          <span
            class="c15"
          >
            —
          </span>
        </span>
      </li>
    </ul>
    <div
      class="c16"
    >
      <span
        class="c17"
      >
        totalLabel
      </span>
      <span
        class="c18"
      >
        included
      </span>
    </div>
  </aside>
</div>
`;
